@@ -1,10 +1,0 @@
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=237547"><B>mingw-runtime-2.3 released</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-12-21 06:51</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=237547">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=234875"><B>Release Candidate: binutils-2.13.90-20021209-1.tar.gz</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-12-11 05:21</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=234875">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=234828"><B>Released: msysDTK-1.0.0.exe</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-12-10 14:39</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=234828">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=234827"><B>Release Candidate: gcj-3.2-20021210-1.tar.gz</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-12-10 14:31</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=234827">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=234484"><B>Released: MSYS-1.0.8</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-12-09 09:04</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=234484">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=230998"><B>Release Candidate: MSYS-1.0.8-rc-3.exe</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-11-26 07:33</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=230998">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=230796"><B>Released: w32api-2.1</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-11-25 18:00</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=230796">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=228011"><B>Updated MinGW FAQ</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-11-14 10:44</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=228011">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=227507"><B>MinGW CVS w32api updated</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-11-12 07:52</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=227507">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=227505"><B>MinGW CVS runtime updated</B></A>&nbsp;&nbsp;&nbsp;<I>earnie - 2002-11-12 07:41</I><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=227505">[Read More/Comment]</a></div><HR width="100%" size="1" noshade><div align="center"><a href="http://sourceforge.net/news/?group_id=2435">[News archive]</a></div>
